@@ -62,8 +62,9 @@ public class SecurityConfig {
                 .authorizeHttpRequests((authorize) ->
                         authorize.requestMatchers("/api/auth/**").permitAll()
                                 .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-                                .requestMatchers(HttpMethod.GET, "/api/juegos", "/api/juegos/**", "/api/productos", "/api/productos/**", "/api/eventos/*/imagen", "/api/clientes/*/imagen").permitAll()
+                                .requestMatchers(HttpMethod.GET, "/api/juegos", "/api/juegos/**", "/api/productos", "/api/productos/**", "/api/eventos", "/api/eventos/**", "/api/clientes/*/imagen").permitAll()
                                 .requestMatchers("/actuator/health").permitAll()
+                                .requestMatchers(HttpMethod.POST, "/api/reservas-mesa").permitAll()
                                 .anyRequest().authenticated()
                 ).exceptionHandling(exception -> exception
                         .authenticationEntryPoint(authenticationEntryPoint)
@@ -78,8 +79,8 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
         config.setAllowCredentials(true);
 
